--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="courses-panel">
+
+  <h3>All Courses</h3>
+
+  <mat-tab-group>
+
+    <mat-tab label="Beginners">
+
+      <courses-card-list [courses]="beginnerCourses()" />
+
+    </mat-tab>
+
+    <mat-tab label="Advanced">
+
+      <courses-card-list [courses]="advancedCourses()" />
+
+    </mat-tab>
+
+  </mat-tab-group>
+
+</div>
