angular signals course

--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -3,15 +3,15 @@
 
   <div class="course-card">
 
-    <div class="card-header">
+    <div class="course-header">
 
       <span class="course-title">{{course.description}}</span>
 
     </div>
 
-    <img [src]="course.iconUrl">
+    <img class="course-image" [src]="course.iconUrl">
 
-    <div class="course-content">
+    <div class="course-description">
       <p>{{course.longDescription}}</p>
     </div>
 
