--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,10 @@
 
   <h3>All Courses</h3>
 
+  <button class="add-course" (click)="onAddCourse()">
+    Add Course
+  </button>
+
   <mat-tab-group>
 
     <mat-tab label="Beginners">
