--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,3 +5,11 @@
 }
 
 
+.add-course {
+  background: #1f172d;
+  color: white;
+  padding: 10px 20px;
+  border: 1px solid #2086fc;
+  border-radius: 5px;
+  cursor: pointer;
+}
