--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -1,1 +1,15 @@
-<p>edit-course-dialog works!</p>
+
+<div class="edit-course-form">
+
+  <label>
+    Course title:
+    <input placeholder="Enter course title">
+  </label>
+
+  <div class="form-actions">
+
+    <button class="btn"></button>
+
+  </div>
+
+</div>
