--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <h3>All Courses</h3>
 
-  <button class="add-course" (click)="onAddCourse()">
+  <button class="btn" (click)="onAddCourse()">
     Add Course
   </button>
 
