--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,15 +1,12 @@
 
+@import "../../styles/button";
+
+@include buttonStyles();
+
 .courses-panel {
   max-width: 400px;
   margin: 0 auto;
 }
 
 
-.add-course {
-  background: #1f172d;
-  color: white;
-  padding: 10px 20px;
-  border: 1px solid #2086fc;
-  border-radius: 5px;
-  cursor: pointer;
-}
+
