angular signals course

--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -1,7 +1,7 @@
 
 <div class="edit-course-form">
 
-  <div class="title">{{data?.title}}</div>
+  <h3>{{data?.title}}</h3>
 
   <label>
     Course title:
