--- a/src/app/edit-course-dialog/edit-course-dialog.component.scss
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.scss
@@ -6,4 +6,21 @@
 .edit-course-form {
   display: flex;
   flex-direction: column;
+  padding: 10px;
+  color:white;
+}
+
+input {
+  margin-left: 5px;
+}
+
+.form-actions {
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.form-actions button {
+  text-transform: uppercase;
+  margin-right: 10px;
 }
