angular signals course

--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -5,7 +5,7 @@
 
     <div class="course-header">
 
-      <span class="course-title">{{course.description}}</span>
+      <span class="course-title">{{course.title}}</span>
 
     </div>
 
