--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -5,7 +5,7 @@
 
   <label>
     Course title:
-    <input placeholder="Enter course title">
+    <input placeholder="Enter course title" [value]="data?.course?.title" #title>
   </label>
 
   <div class="form-actions">
