angular signals course

--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -10,7 +10,7 @@
 
   <div class="form-actions">
 
-    <button class="btn">Save</button>
+    <button class="btn" (click)="onSave()">Save</button>
 
     <button class="btn" (click)="onCancel()">
       Cancel
