angular signals course

--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -1,11 +1,11 @@
 
 <div class="edit-course-form">
 
-  <h3>{{data?.title}}</h3>
+  <h3>{{data.title}}</h3>
 
   <label>
     Course title:
-    <input placeholder="Enter course title" [value]="data?.course?.title" #title>
+    <input placeholder="Enter course title" [value]="data.course?.title" #title>
   </label>
 
   <div class="form-actions">
