--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -3,10 +3,25 @@
 
   <h3>{{data.title}}</h3>
 
-  <label>
-    Course title:
+  <div class="form-control">
+    <label>Course title:</label>
     <input placeholder="Enter course title" [value]="data.course?.title" #title>
-  </label>
+  </div>
+
+  <div class="form-control">
+    <label>Course description:</label>
+    <textarea placeholder="Enter course description" [value]="data.course?.longDescription" #description>
+    </textarea>
+  </div>
+
+  <div class="form-control">
+    <label>Course category:</label>
+    <select [value]="data.course?.category">
+      <option value="BEGINNER">Beginners</option>
+      <option value="INTERMEDIATE">Intermediate</option>
+      <option value="ADVANCED">Advanced</option>
+    </select>
+  </div>
 
   <div class="form-actions">
 
