--- a/src/app/edit-course-dialog/edit-course-dialog.component.scss
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.scss
@@ -6,11 +6,44 @@
 .edit-course-form {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 0 15px 15px 15px;
   color:white;
 }
 
 input {
+  margin-left: 5px;
+}
+
+.form-control {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.form-control textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  min-height: 100px;
+}
+
+.form-control select {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.form-control label {
+  margin-bottom: 5px;
   margin-left: 5px;
 }
 
