angular signals course

--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -25,6 +25,8 @@
         EDIT
       </button>
 
+      <img class="delete" src="/assets/icons/delete.svg" (click)="deleteCourse(course.id)">
+
     </div>
 
   </div>
