--- a/src/app/courses-card-list/courses-card-list.component.scss
+++ b/src/app/courses-card-list/courses-card-list.component.scss
@@ -39,3 +39,14 @@
 .course-actions button {
   margin-right: 5px;
 }
+
+.delete {
+  max-height: 30px;
+  border-radius: 15px;
+  margin-left: 5px;
+  margin-top: 3px;
+  border: 1px solid #2086fc;
+  background: #1f172d;
+  cursor: pointer;
+
+}
