--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -5,7 +5,7 @@
 
   <div class="messages-container">
 
-    <div class="message">
+    <div class="message" [ngClass]="message()?.severity">
       {{message()?.text}}
       <img class="close" src="/assets/icons/close.svg" (click)="onClose()">
     </div>
