--- a/src/app/edit-course-dialog/edit-course-dialog.component.scss
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.scss
@@ -1,7 +1,9 @@
 
 @import "../../styles/button";
+@import "../../styles/forms";
 
 @include buttonStyles();
+@include formStyles();
 
 .edit-course-form {
   display: flex;
@@ -10,50 +12,3 @@
   color:white;
 }
 
-input {
-  margin-left: 5px;
-}
-
-.form-control {
-  margin-bottom: 15px;
-  display: flex;
-  flex-direction: column;
-}
-
-.form-control input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.form-control textarea {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  min-height: 100px;
-}
-
-.form-control select {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.form-control label {
-  margin-bottom: 5px;
-  margin-left: 5px;
-}
-
-.form-actions {
-  margin-top: 20px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.form-actions button {
-  text-transform: uppercase;
-  margin-right: 10px;
-}
