--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,15 +23,18 @@
         <span>Register</span>
       </a>
 
-      <a mat-list-item routerLink="login">
-        <mat-icon>account_circle</mat-icon>
-        <span>Login</span>
-      </a>
-
-      <a mat-list-item (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon>
-        <span>Logout</span>
-      </a>
+      @if (!isLoggedIn()) {
+        <a mat-list-item routerLink="login">
+          <mat-icon>account_circle</mat-icon>
+          <span>Login</span>
+        </a>
+      }
+      @else {
+        <a mat-list-item (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Logout</span>
+        </a>
+      }
 
     </mat-nav-list>
 
