angular signals course

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,7 @@
 
       <a mat-list-item routerLink="/search-lessons">
         <mat-icon>search</mat-icon>
-        <span>Search Lessons</span>
-      </a>
-
-      <a mat-list-item routerLink="about">
-        <mat-icon>question_answer</mat-icon>
-        <span>About</span>
-      </a>
-      <a mat-list-item>
-        <mat-icon>person_add</mat-icon>
-        <span>Register</span>
+        <span>Lessons</span>
       </a>
 
       @if (!isLoggedIn()) {
