--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <span>Courses</span>
       </a>
 
-      <a mat-list-item routerLink="/search-lessons">
+      <a mat-list-item routerLink="/lessons">
         <mat-icon>search</mat-icon>
         <span>Lessons</span>
       </a>
