--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,18 @@
 
 <div class="login">
 
-  <div class="login-form">
+  <div class="login-form" [formGroup]="form">
 
     <h3>Login</h3>
 
     <div class="form-control">
       <label>Email:</label>
-      <input placeholder="Enter your email" #email>
+      <input placeholder="Enter your email" formControlName="email">
     </div>
 
     <div class="form-control">
       <label>Password:</label>
-      <input type="password" placeholder="Enter your password" #password>
+      <input type="password" placeholder="Enter your password" formControlName="password">
     </div>
 
   </div>
@@ -20,7 +20,7 @@
   <div class="form-actions">
     <button class="btn" routerLink="/home">Home</button>
 
-    <button class="btn" (click)="onLogin(email.value, password.value)">
+    <button class="btn" (click)="onLogin()">
       Login
     </button>
 
