--- a/src/app/lessons/lessons.component.scss
+++ b/src/app/lessons/lessons.component.scss
@@ -10,11 +10,40 @@
   margin: 0 auto;
 }
 
+.header h1 {
+  text-align: center;
+}
+
 .search-controls {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .search {
   margin-left: 10px;
 }
+
+.table-container {
+  border: 1px solid #2086fc;
+  border-radius: 5px;
+}
+
+.results-table {
+  border-collapse: collapse;
+  width: 100%;
+  tr {
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+  }
+  tr:last-child {
+    border-bottom: none;
+  }
+  th, td {
+    padding: 10px;
+    text-align: left;
+  }
+}
+
+
+
