--- a/src/app/lessons/lessons.component.html
+++ b/src/app/lessons/lessons.component.html
@@ -1,43 +1,45 @@
 <div class="lessons">
 
-  <div class="header">
+  @if(mode() == 'search') {
+    <div class="header">
 
-    <h1>Search Lessons</h1>
+      <h1>Search Lessons</h1>
 
-    <div class="form-control search-controls">
+      <div class="form-control search-controls">
 
-      <input placeholder="Search for a lesson"
-             (keyup.enter)="onSearch()" #search>
+        <input placeholder="Search for a lesson"
+               (keyup.enter)="onSearch()" #search>
 
-      <button class="btn search" (click)="onSearch()">
-        Search
-      </button>
+        <button class="btn search" (click)="onSearch()">
+          Search
+        </button>
 
-    </div>
-
-  </div>
-
-  @if(lessons().length > 0) {
-
-    <div class="table-container">
-
-      <table class="results-table">
-
-        @for (lesson of lessons(); track lesson.id) {
-          <tr (click)="onDetailSelected(lesson)">
-            <td>
-              {{ lesson.description }}
-            </td>
-            <td>
-              {{ lesson.duration }}
-            </td>
-          </tr>
-        }
-
-      </table>
+      </div>
 
     </div>
 
+    @if(lessons().length > 0) {
+
+      <div class="table-container">
+
+        <table class="results-table">
+
+          @for (lesson of lessons(); track lesson.id) {
+            <tr (click)="onDetailSelected(lesson)">
+              <td>
+                {{ lesson.description }}
+              </td>
+              <td>
+                {{ lesson.duration }}
+              </td>
+            </tr>
+          }
+
+        </table>
+
+      </div>
+
+    }
   }
 
 </div>
