angular signals course

--- a/src/app/lessons/lessons.component.html
+++ b/src/app/lessons/lessons.component.html
@@ -42,5 +42,11 @@
     }
   }
 
+  @if(mode() == 'detail') {
+    <lesson-detail
+      [(lesson)]="selectedLesson"
+      (cancel)="onCancel()"/>
+  }
+
 </div>
 
