angular signals course

--- a/src/app/lessons/lessons.component.html
+++ b/src/app/lessons/lessons.component.html
@@ -44,7 +44,8 @@
 
   @if(mode() == 'detail') {
     <lesson-detail
-      [(lesson)]="selectedLesson"
+      [lesson]="selectedLesson()"
+      (lessonUpdated)="onLessonUpdated($event)"
       (cancel)="onCancel()"/>
   }
 
