--- a/src/app/lessons/lesson-detail/lesson-detail.component.html
+++ b/src/app/lessons/lesson-detail/lesson-detail.component.html
@@ -7,14 +7,14 @@
 
   <div class="form-control edit-lesson">
     <label>Lesson title:</label>
-    <input placeholder="Enter course title" [value]="lesson()?.description">
+    <input placeholder="Enter course title" [value]="lesson()?.description" #description>
   </div>
 
 </div>
 
 <div class="form-actions">
 
-  <button class="btn" (click)="onSave()">
+  <button class="btn" (click)="onSave(description.value)">
     Save
   </button>
 
