--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,7 @@
           <mat-icon>account_circle</mat-icon>
           <span>Login</span>
         </a>
-      }
-      @else {
+      } @else {
         <a mat-list-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
           <span>Logout</span>
@@ -47,10 +46,10 @@
   </mat-toolbar>
 
 
-  <loading />
+  <loading/>
 
-  <messages />
+  <messages/>
 
-  <router-outlet />
+  <router-outlet/>
 
 </mat-sidenav-container>
