angular signals course

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,10 @@
     Add Course
   </button>
 
+  <button class="btn" (click)="triggerToSignal()">
+    Trigger toSignal()
+  </button>
+
   <mat-tab-group>
 
     <mat-tab label="Beginners">
