--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,17 +14,14 @@
         <span>Lessons</span>
       </a>
 
-      @if (!isLoggedIn()) {
-        <a mat-list-item routerLink="login">
-          <mat-icon>account_circle</mat-icon>
-          <span>Login</span>
-        </a>
-      } @else {
-        <a mat-list-item (click)="logout()">
-          <mat-icon>exit_to_app</mat-icon>
-          <span>Logout</span>
-        </a>
-      }
+      <a mat-list-item routerLink="login">
+        <mat-icon>account_circle</mat-icon>
+        <span>Login</span>
+      </a>
+      <a mat-list-item>
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Logout</span>
+      </a>
 
     </mat-nav-list>
 
@@ -42,13 +39,8 @@
 
     </div>
 
-
   </mat-toolbar>
 
-
-  <loading/>
-
-  <messages/>
 
   <router-outlet/>
 
