--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -1,47 +1,41 @@
 <loading/>
 
-<div class="edit-course-form" [formGroup]="form">
+<div class="edit-course-form">
 
-  <h3>{{ data.title }}</h3>
+  <h3></h3>
 
   <div class="form-control">
     <label>Course title:</label>
-    <input placeholder="Enter course title" [value]="data.course?.title" formControlName="title">
+    <input placeholder="Enter course title">
   </div>
 
   <div class="form-control">
     <label>Course description:</label>
-    <textarea placeholder="Enter course description"
-              [value]="data.course?.longDescription" formControlName="longDescription">
+    <textarea placeholder="Enter course description">
     </textarea>
   </div>
 
   <div class="form-control">
     <label>Course category:</label>
-    <select [value]="data.course?.category" formControlName="category">
+    <select>
       <option value="BEGINNER">Beginners</option>
       <option value="INTERMEDIATE">Intermediate</option>
       <option value="ADVANCED">Advanced</option>
     </select>
   </div>
 
-  <p>Course category: {{category()}}</p>
-
-  <course-category-combobox label="Course category" [(value)]="category"/>
-
   <div class="form-control">
     <label>Course image:</label>
-    <input placeholder="Enter course title"
-           [value]="data.course?.iconUrl" formControlName="iconUrl">
+    <input placeholder="Enter course title">
   </div>
 
   <div class="form-actions">
 
-    <button class="btn" (click)="onSave()">
+    <button class="btn">
       Save
     </button>
 
-    <button class="btn" (click)="onCancel()">
+    <button class="btn">
       Cancel
     </button>
 
