--- a/src/app/lessons/lesson-detail/lesson-detail.component.html
+++ b/src/app/lessons/lesson-detail/lesson-detail.component.html
@@ -4,18 +4,18 @@
 
   <div class="form-control edit-lesson">
     <label>Lesson title:</label>
-    <input placeholder="Enter course title" [value]="lesson()?.description" #description>
+    <input placeholder="Enter course title">
   </div>
 
 </div>
 
 <div class="form-actions">
 
-  <button class="btn" (click)="onSave(description.value)">
+  <button class="btn" >
     Save
   </button>
 
-  <button class="btn" (click)="onCancel()">
+  <button class="btn">
     Cancel
   </button>
 
