--- a/src/app/course-category-combobox/course-category-combobox.component.html
+++ b/src/app/course-category-combobox/course-category-combobox.component.html
@@ -1,9 +1,9 @@
 
 <div class="form-control">
 
-  <label>{{ label() }}:</label>
+  <label></label>
 
-  <select [value]="value()" (change)="onCategoryChanged(category.value)" #category>
+  <select  #category>
     <option value="BEGINNER">Beginners</option>
     <option value="INTERMEDIATE">Intermediate</option>
     <option value="ADVANCED">Advanced</option>
