--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="courses-panel">
 
-  <h3>All Courses: {{counter()}}</h3>
+  <h3>All Courses: {{values().join(', ')}}</h3>
 
   <button class="btn">
     Add Course
   </button>
 
-  <button class="btn" (click)="increment()">
-    Increment
+  <button class="btn" (click)="append()">
+    Append
   </button>
 
   <mat-tab-group>
