--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,9 @@
 <div class="courses-panel">
 
-  <h3>All Courses: {{counter()}}</h3>
+  <h3>All Courses:</h3>
 
   <button class="btn">
     Add Course
-  </button>
-
-  <button class="btn" (click)="increment()">
-    Increment
-  </button>
-
-  <button class="btn" (click)="cleanup()">
-    Cleanup
   </button>
 
   <mat-tab-group>
