--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,14 +9,13 @@
   <mat-tab-group>
 
     <mat-tab label="Beginners">
-
-
-
+      <courses-card-list
+        [courses]="beginnerCourses()" />
     </mat-tab>
 
     <mat-tab label="Advanced">
-
-
+      <courses-card-list
+       [courses]="advancedCourses()"/>
     </mat-tab>
 
   </mat-tab-group>
