--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -12,7 +12,7 @@
       <button class="btn">
         VIEW COURSE
       </button>
-      <button class="btn">
+      <button class="btn" (click)="onEditCourse(course)">
         EDIT
       </button>
       <img class="delete" src="/assets/icons/delete.svg">
