--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -34,7 +34,7 @@
 
   <div class="form-actions">
 
-    <button class="btn">
+    <button class="btn" (click)="onSave()">
       Save
     </button>
 
