--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -15,7 +15,8 @@
       <button class="btn" (click)="onEditCourse(course)">
         EDIT
       </button>
-      <img class="delete" src="/assets/icons/delete.svg">
+      <img class="delete" src="/assets/icons/delete.svg"
+        (click)="onCourseDeleted(course)">
     </div>
   </div>
 }
