--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,14 @@
     <mat-tab label="Beginners">
       <courses-card-list
         (courseUpdated)="onCourseUpdated($event)"
+        (courseDeleted)="onCourseDeleted($event)"
         [courses]="beginnerCourses()" />
     </mat-tab>
 
     <mat-tab label="Advanced">
       <courses-card-list
         (courseUpdated)="onCourseUpdated($event)"
+        (courseDeleted)="onCourseDeleted($event)"
        [courses]="advancedCourses()"/>
     </mat-tab>
 
