--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,5 +1,13 @@
 
-
+@if(message()) {
+  <div class="messages-container">
+    <div class="message" [ngClass]="message()?.severity">
+      {{message()?.text}}
+    </div>
+    <img class="close" src="/assets/icons/close.svg"
+         (click)="onClose()">
+  </div>
+}
 
 
 
