--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,18 @@
 <div class="login">
 
-  <div class="login-form">
+  <div class="login-form" [formGroup]="form">
 
     <h3>Login</h3>
 
     <div class="form-control">
       <label>Email:</label>
-      <input placeholder="Enter your email">
+      <input placeholder="Enter your email" formControlName="email">
     </div>
 
     <div class="form-control">
       <label>Password:</label>
-      <input type="password" placeholder="Enter your password">
+      <input type="password" formControlName="password"
+             placeholder="Enter your password">
     </div>
 
   </div>
@@ -19,7 +20,7 @@
   <div class="form-actions">
     <button class="btn" routerLink="/home">Home</button>
 
-    <button class="btn">
+    <button class="btn" (click)="onLogin()">
       Login
     </button>
 
