--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,14 +14,18 @@
         <span>Lessons</span>
       </a>
 
-      <a mat-list-item routerLink="login">
-        <mat-icon>account_circle</mat-icon>
-        <span>Login</span>
-      </a>
-      <a mat-list-item>
-        <mat-icon>exit_to_app</mat-icon>
-        <span>Logout</span>
-      </a>
+      @if(isLoggedIn()) {
+        <a mat-list-item>
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Logout</span>
+        </a>
+      }
+      @else {
+        <a mat-list-item routerLink="login">
+          <mat-icon>account_circle</mat-icon>
+          <span>Login</span>
+        </a>
+      }
 
     </mat-nav-list>
 
