--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       </a>
 
       @if(isLoggedIn()) {
-        <a mat-list-item>
+        <a mat-list-item (click)="onLogout()">
           <mat-icon>exit_to_app</mat-icon>
           <span>Logout</span>
         </a>
