upgrade to Angular 18

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,26 @@
 
   <h3>Plain counter: {{counter}}</h3>
 
-  <h3>Interval counter: {{intervalCounter}}</h3>
+  <!--h3>Observable counter: {{counter$ | async}}</h3-->
 
-  <h3>Observable counter: {{counter$ | async}}</h3>
+  <h3>Interval counter: {{intervalCounter()}}</h3>
+
+
+
+
+  <course-card>
+
+  </course-card>
+
+
+
+
+
+
+
+
+
+
 
 
   <button class="btn" (click)="increment()">
