--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,21 +12,21 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$angular-signals-course-primary: mat.define-palette(mat.$indigo-palette);
-$angular-signals-course-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$angular-signals-course-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$angular-signals-course-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$angular-signals-course-warn: mat.define-palette(mat.$red-palette);
+$angular-signals-course-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-signals-course-theme: mat.define-dark-theme((
+$angular-signals-course-theme: mat.m2-define-dark-theme((
   color: (
     primary: $angular-signals-course-primary,
     accent: $angular-signals-course-accent,
     warn: $angular-signals-course-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: mat.m2-define-typography-config(),
   density: 0
 ));
 
