--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,9 +1,11 @@
+
 <div class="course-container">
+
   <div class="course-header">
 
     <h1>{{ course()?.title }}</h1>
 
-    <img [src]="course()?.iconUrl">
+    <img class="course-image" [src]="course()?.iconUrl">
 
   </div>
 
