--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,1 +1,16 @@
-<p>course works!</p>
+
+<div class="course-container">
+
+  <div class="course-header">
+
+  </div>
+
+  <div class="table-container">
+
+    <table class="results-table">
+
+    </table>
+
+  </div>
+
+</div>
