--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -9,7 +9,8 @@
       <p>{{course.longDescription}}</p>
     </div>
     <div class="course-actions">
-      <button class="btn">
+      <button class="btn"
+              [routerLink]="['courses', course.id]" >
         VIEW COURSE
       </button>
       <button class="btn" (click)="onEditCourse(course)">
