--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,16 +1,20 @@
-
 <div class="course-container">
-
   <div class="course-header">
-
+    <h1>{{ course()?.title }}</h1>
+    <img class="course-image" [src]="course()?.iconUrl">
   </div>
-
   <div class="table-container">
-
     <table class="results-table">
-
+      @for(lesson of lessons(); track lesson.id) {
+        <tr>
+          <td>
+            {{lesson.description}}
+          </td>
+          <td>
+            {{lesson.duration}}
+          </td>
+        </tr>
+      }
     </table>
-
   </div>
-
 </div>
