--- a/src/app/lessons/lesson-detail/lesson-detail.component.html
+++ b/src/app/lessons/lesson-detail/lesson-detail.component.html
@@ -4,18 +4,19 @@
 
   <div class="form-control edit-lesson">
     <label>Lesson title:</label>
-    <input placeholder="Enter course title">
+    <input placeholder="Enter course title"
+      [value]="lesson()?.description">
   </div>
 
 </div>
 
 <div class="form-actions">
 
-  <button class="btn" >
+  <button class="btn">
     Save
   </button>
 
-  <button class="btn">
+  <button class="btn" (click)="onCancel()">
     Cancel
   </button>
 
