--- a/src/app/lessons/lessons.component.html
+++ b/src/app/lessons/lessons.component.html
@@ -29,7 +29,8 @@
   @else {
     <lesson-detail
       [lesson]="selectedLesson()"
-      (cancel)="onCancel()"/>
+      (cancel)="onCancel()"
+      (lessonUpdated)="onLessonUpdated($event)"/>
   }
 
 </div>
