--- a/src/app/lessons/lesson-detail/lesson-detail.component.html
+++ b/src/app/lessons/lesson-detail/lesson-detail.component.html
@@ -5,14 +5,14 @@
   <div class="form-control edit-lesson">
     <label>Lesson title:</label>
     <input placeholder="Enter course title"
-      [value]="lesson()?.description">
+      [value]="lesson()?.description" #input>
   </div>
 
 </div>
 
 <div class="form-actions">
 
-  <button class="btn">
+  <button class="btn" (click)="onSave(input.value)">
     Save
   </button>
 
