--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,10 @@
     Add Course
   </button>
 
+  <button class="btn" (click)="onToObservableExample()">
+    toObservable()
+  </button>
+
   <mat-tab-group>
 
     <mat-tab label="Beginners">
