--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,10 @@
     toObservable()
   </button>
 
+  <button class="btn" (click)="onToSignalExample()">
+    toSignal()
+  </button>
+
   <mat-tab-group>
 
     <mat-tab label="Beginners">
