--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,13 @@
 <div class="courses-panel">
-
-  <h3>All Courses</h3>
-
-  <button class="btn">
-    Add Course
-  </button>
+  <!-- <h3>All Courses {{ counter().value }}</h3> -->
+  <h3>All Courses {{ values().join(", ") }}</h3>
+  <button class="btn">Add Course</button>
+  <button class="btn" (click)="increment()">Increment</button>
+  <button class="btn" (click)="append()">Append</button>
 
   <mat-tab-group>
+    <mat-tab label="Beginners"> </mat-tab>
 
-    <mat-tab label="Beginners">
-
-
-
-    </mat-tab>
-
-    <mat-tab label="Advanced">
-
-
-    </mat-tab>
-
+    <mat-tab label="Advanced"> </mat-tab>
   </mat-tab-group>
-
 </div>
