--- a/src/app/linked-signal/linked-signal-demo.component.html
+++ b/src/app/linked-signal/linked-signal-demo.component.html
@@ -7,7 +7,7 @@
 
     <label>Select Course</label>
 
-    <select [value]="selectedCourse()">
+    <select [value]="selectedCourse()" (change)="onCourseSelected(course.value)" #course>
       <option value="BEGINNERS">Angular For Beginners</option>
       <option value="SIGNALS">Angular Signals In Depth</option>
       <option value="SSR">Angular SSR In Depth</option>
@@ -19,9 +19,9 @@
 
     <label>Quantity</label>
 
-    <input type="number" value="1" min="1" max="10"
-           (change)="onQuantityChanged(quantity.value)"
-           #quantity/>
+    <input type="number" [value]="quantity()" min="1" max="10"
+           (change)="onQuantityChanged(input.value)"
+           #input/>
 
   </div>
 
