--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,11 @@
         <span>Shopping Cart</span>
       </a>
 
+      <a mat-list-item routerLink="/resource-demo">
+        <mat-icon>search</mat-icon>
+        <span>resource() Demo</span>
+      </a>
+
       @if(isLoggedIn()) {
         <a mat-list-item (click)="onLogout()">
           <mat-icon>exit_to_app</mat-icon>
