new lessons Angular 19

--- a/src/app/resource-demo/resource-demo.component.html
+++ b/src/app/resource-demo/resource-demo.component.html
@@ -20,6 +20,10 @@
         }
       </table>
     </div>
+
+    <button class="btn reload-btn" (click)="reloadCourses()">
+      Reload Courses
+    </button>
   }
 
 
