new lessons Angular 19

--- a/src/app/resource-demo/resource-demo.component.html
+++ b/src/app/resource-demo/resource-demo.component.html
@@ -8,7 +8,7 @@
   <div class="course-header">
 
     <div class="form-control">
-      <input placeholder="Search lessons" (keydown.enter)="searchLessons(input.value)" #input>
+      <input placeholder="Search lessons" (keydown)="searchLessons(input.value)" #input>
     </div>
 
 </div>
