Build: CRUD Service Layer with Fetch Api

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,12 +9,13 @@
   <mat-tab-group>
 
     <mat-tab label="Beginners">
-
+      <courses-card-list [data]="beginnerCourses()" />
 
 
     </mat-tab>
 
     <mat-tab label="Advanced">
+      <courses-card-list [data]="advancedCourses()" />
 
 
     </mat-tab>
