--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -1,23 +1,25 @@
-<loading/>
+<loading />
 
-<div class="edit-course-form">
-
-  <h3></h3>
+<div class="edit-course-form" [formGroup]="form">
+  <h3>{{ data.title }}</h3>
 
   <div class="form-control">
     <label>Course title:</label>
-    <input placeholder="Enter course title">
+    <input placeholder="Enter course title" formControlName="title" />
   </div>
 
   <div class="form-control">
     <label>Course description:</label>
-    <textarea placeholder="Enter course description">
+    <textarea
+      placeholder="Enter course description"
+      formControlName="longDescription"
+    >
     </textarea>
   </div>
 
   <div class="form-control">
     <label>Course category:</label>
-    <select>
+    <select formControlName="category">
       <option value="BEGINNER">Beginners</option>
       <option value="INTERMEDIATE">Intermediate</option>
       <option value="ADVANCED">Advanced</option>
@@ -26,19 +28,12 @@
 
   <div class="form-control">
     <label>Course image:</label>
-    <input placeholder="Enter course title">
+    <input placeholder="Enter course title" formControlName="iconUrl" />
   </div>
 
   <div class="form-actions">
+    <button class="btn" (click)="onSave()">Save</button>
 
-    <button class="btn">
-      Save
-    </button>
-
-    <button class="btn" (click)="onClose()">
-      Cancel
-    </button>
-
+    <button class="btn" (click)="onClose()">Cancel</button>
   </div>
-
 </div>
