--- a/src/app/linked-signal/linked-signal-demo.component.scss
+++ b/src/app/linked-signal/linked-signal-demo.component.scss
@@ -1,9 +1,8 @@
+@use "../../styles/button" as button;
+@use "../../styles/forms" as forms;
 
-@import "../../styles/button";
-@import "../../styles/forms";
-
-@include buttonStyles();
-@include formStyles();
+@include button.buttonStyles();
+@include forms.formStyles();
 
 .demo-container {
   max-width: 400px;
