--- a/src/app/resource-demo/resource-demo.component.scss
+++ b/src/app/resource-demo/resource-demo.component.scss
@@ -1,9 +1,8 @@
-@import "../../styles/button";
-@import "../../styles/forms";
-@import "../../styles/table";
+@use "../../styles/button" as button;
+@use "../../styles/forms" as forms;
 
-@include buttonStyles();
-@include formStyles();
+@include button.buttonStyles();
+@include forms.formStyles();
 
 .demo-container {
   max-width: 400px;
