--- a/src/app/edit-course-dialog/edit-course-dialog.component.scss
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.scss
@@ -1,8 +1,8 @@
-@import "../../styles/button";
-@import "../../styles/forms";
+@use "../../styles/button" as button;
+@use "../../styles/forms" as forms;
 
-@include buttonStyles();
-@include formStyles();
+@include button.buttonStyles();
+@include forms.formStyles();
 
 .edit-course-form {
   display: flex;
