--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
-@import "../../styles/button";
+@use "../../styles/button" as button;
 
-@include buttonStyles();
+@include button.buttonStyles();
 
 .courses-panel {
   max-width: 400px;
