--- a/src/app/lessons/lesson-detail/lesson-detail.component.scss
+++ b/src/app/lessons/lesson-detail/lesson-detail.component.scss
@@ -1,9 +1,8 @@
-@import "../../../styles/button";
-@import "../../../styles/forms";
+@use "../../../styles/button" as button;
+@use "../../../styles/forms" as forms;
 
-@include buttonStyles();
-@include formStyles();
-
+@include button.buttonStyles();
+@include forms.formStyles();
 
 .lesson-detail {
   max-width: 600px;
