--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="courses-panel">
 
-  <h3>All Courses</h3>
+  <h3>All Courses: {{ values().join(', ') }}</h3>
 
   <button class="btn">
     Add Course
+  </button>
+
+  <button class="btn" (click)="append()">
+    Append
   </button>
 
   <mat-tab-group>
