--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -13,10 +13,14 @@
             <button class="btn">
                 VIEW COURSE
             </button>
-            <button class="btn">
+            <button class="btn" (click)="onEditCourse(course)">
                 EDIT
             </button>
-            <img src="/assets/icons/delete.svg" alt="" class="delete">
+            <img 
+                src="/assets/icons/delete.svg" 
+                class="delete"
+                (click)="onCourseDeleted(course)"
+                >
         </div>
     </div>
 }
