--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,18 +2,26 @@
 
   <h3>All Courses: </h3>
 
-  <button class="btn">
+  <button class="btn" (click)="onAddCourse()">
     Add Course
   </button>
 
   <mat-tab-group>
 
     <mat-tab label="Beginners">
-      <courses-card-list [courses]="beginnerCourses()"/>
+      <courses-card-list 
+        ($courseUpdated)="onCourseUpdated($event)" 
+        ($courseDeleted)="onCourseDeleted($event)"
+        [courses]="beginnerCourses()"
+        />
     </mat-tab>
 
     <mat-tab label="Advanced">
-      <courses-card-list [courses]="advancedCourses()"/>
+      <courses-card-list 
+        ($courseUpdated)="onCourseUpdated($event)" 
+        ($courseDeleted)="onCourseDeleted($event)"
+        [courses]="advancedCourses()"
+        />
     </mat-tab>
 
   </mat-tab-group>
