--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,8 @@
-
-
-
-
-
-
+@if (message()) {
+  <div class="messages-container">
+    <div class="message" [ngClass]="message()?.severity">
+      {{ message()?.text }}
+      <img src="/assets/icons/close.svg" class="close" (click)="onClose()" />
+    </div>
+  </div>
+}
