--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,14 +24,18 @@
         <span>resource() Demo</span>
       </a>
 
-      <a mat-list-item routerLink="login">
-        <mat-icon>account_circle</mat-icon>
-        <span>Login</span>
-      </a>
-      <a mat-list-item>
-        <mat-icon>exit_to_app</mat-icon>
-        <span>Logout</span>
-      </a>
+      @if (isLoggedIn()) {
+        <a mat-list-item (click)="onLogout()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Logout</span>
+        </a>
+      } @else {
+        <a mat-list-item routerLink="login">
+          <mat-icon>account_circle</mat-icon>
+          <span>Login</span>
+        </a>
+      }
+
 
     </mat-nav-list>
 
@@ -51,6 +55,7 @@
 
   </mat-toolbar>
 
+  <messages/>
   <loading/>
 
   <router-outlet/>
