--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,1 +1,20 @@
-<p>course works!</p>
+<div class="course-container">
+  <div class="course-header">
+    <h1>{{ course()?.title }}</h1>
+    <img [src]="course()?.iconUrl" class="course-image" />
+  </div>
+  <div class="table-container">
+    <table class="results-table">
+      @for (lesson of lessons(); track lesson.id) {
+      <tr>
+        <td>
+          {{ lesson.description }}
+        </td>
+        <td>
+          {{ lesson.duration }}
+        </td>
+      </tr>
+      }
+    </table>
+  </div>
+</div>
