--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,15 @@
 
   <h3>All Courses: </h3>
 
-  <button class="btn" (click)="onAddCourse()">
+  <button class="btn" (click)="onAddCourse()" #button>
     Add Course
   </button>
 
   <mat-tab-group>
 
     <mat-tab label="Beginners">
-      <courses-card-list 
+      <courses-card-list #beginnersList
+        matTooltip="Beginner Courses"
         ($courseUpdated)="onCourseUpdated($event)" 
         ($courseDeleted)="onCourseDeleted($event)"
         [courses]="beginnerCourses()"
