--- a/src/app/lessons/lessons.component.html
+++ b/src/app/lessons/lessons.component.html
@@ -1,5 +1,36 @@
 <div class="lessons">
-
+  @if (mode() === 'master') {
+    <div class="header">
+      <h1>Search Lessons</h1>
+      <div class="form-control search-controls">
+        <input
+          type="text"
+          placeholder="Search for a lesson"
+          (keyup.enter)="onSearch()"
+          #search
+        />
+        <button class="btn search" (click)="onSearch()">Search</button>
+      </div>
+    </div>
+  } @else { 
+    <lesson-detail 
+      [lesson]="selectedLesson()"
+      (cancel)="onCancel()"  
+      (lessonUpdated)="onLessonUpdated($event)"
+    />
+  } 
+  
+  @if (lessons().length > 0) {
+    <div class="table-container">
+      <table class="results-table">
+        @for (lesson of lessons(); track $index) {
+        <tr (click)="onLessonSelected(lesson)">
+          <td>{{ lesson.description }}</td>
+          <td>{{ lesson.duration }}</td>
+        </tr>
+        }
+      </table>
+    </div>
+  }
 
 </div>
-
